- Introduced the $mediaRootDir variable in params.php file for setting the media root directory. This is prior to the
  media-root-dir setting in option area of definition file.
- Add methods setRecordStart and clearRecordStart on INTERMediator class.
- The FileURL container is introduced. It can store a 'file:///...' url for an uploaded file with absolute path.
- INTERMediator.ignoreDataInContext(cName[, flag]) ignores the specified context name.
- [BUG FIX] In same case of using aggregation-select/from the error happened about the view or table didn't exist.
- [BUG FIX] INTERMediator.additionalFieldValueOnDelete uses in the Definition File editor, so retrieved it.
- [INFO] About sample SQL files in the dist-docs directory, their extensions changed to .sql from .txt.
- On the multiple client synchronization (i.e. using sync-control in any definition), the clean up task has to call
  "INTERMediator_DBAdapter.unregister()" explicitly.
- INTERMediator.moveAnotherURL(url, task) is newly added. This will call "INTERMediator_DBAdapter.unregister()", do the "task"
  and move to the "url" place

Ver.10 (October 12, 2022)
- Auto saving for INPUT and TEXTAREA element. Customizing in JavaScript code and their default value are:
  IMLibElement.textAutoSave = true // Auto saving availability
  IMLibElement.checkingSeconds = 1 // Repeating period in seconds
  IMLibElement.waitSeconds = 5  // Waiting seconds to save from last input
- Revert the Initial Value feature is working for INPUT and TEXTAREA element with Control+Shift+Z.
- The 'Gear-style' progress information starts with a little bit after. Delay time can customize in JavaScript code.
  INTERMediatorOnPage.progressStartDelay = 300 // Delay time in milliseconds
- The Service Server by node is not booted in default settings. If you need to use it, you have to modify the setting
  in the params.php file. The Service Server requires for server side validation, and synchronizing with clients.