@@ -121,6 +121,7 @@ $slackParameters = [
 
 //$emailAsAliasOfUserName = true;
 //$passwordPolicy = "useAlphabet useNumber useUpper useLower usePunctuation length(10) notUserName";
+//$defaultGroupName = "users"; // For the user who doesn't belong to any group, this group automatically attach to such a user
 
 // An enrollment page and a password reset page are going to show on login panel.
 //$resetPage = '...url...';
